--- a/DidacticalEnigma/Views/JapaneseTextPreview.xaml
+++ b/DidacticalEnigma/Views/JapaneseTextPreview.xaml
@@ -1,11 +1,12 @@
 ﻿<UserControl
-    x:Class="DidacticalEnigma.JapaneseTextPreview"
+    x:Class="DidacticalEnigma.Views.JapaneseTextPreview"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:enigma="clr-namespace:DidacticalEnigma"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:DidacticalEnigma.Models"
+    xmlns:converters="clr-namespace:DidacticalEnigma.Converters"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -41,7 +42,7 @@
                                                 <TextBlock
                                                     ContextMenuService.IsEnabled="{Binding HasSimilar}"
                                                     FontSize="24"
-                                                    Foreground="{Binding DataContext.WordInfo.EstimatedPartOfSpeech, Converter={x:Static enigma:PartOfSpeechToBrushConverter.Default}, RelativeSource={RelativeSource AncestorType={x:Type StackPanel}, Mode=FindAncestor}}"
+                                                    Foreground="{Binding DataContext.WordInfo.EstimatedPartOfSpeech, Converter={x:Static converters:PartOfSpeechToBrushConverter.Default}, RelativeSource={RelativeSource AncestorType={x:Type StackPanel}, Mode=FindAncestor}}"
                                                     Text="{Binding StringForm}"
                                                     ToolTipService.InitialShowDelay="0"
                                                     ToolTipService.IsEnabled="{Binding HasSimilar}"
@@ -53,14 +54,14 @@
                                                         <ContextMenu ItemsSource="{Binding Similar}">
                                                             <ContextMenu.ItemContainerStyle>
                                                                 <Style TargetType="MenuItem">
-                                                                    <Setter Property="IsEnabled" Value="{Binding ., Converter={x:Static enigma:NullabilityToBooleanConverter.Default}}" />
+                                                                    <Setter Property="IsEnabled" Value="{Binding ., Converter={x:Static converters:NullabilityToBooleanConverter.Default}}" />
                                                                     <Setter Property="Command" Value="{Binding DataContext.PlaceInClipboard, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />
                                                                     <Setter Property="CommandParameter" Value="{Binding .}" />
                                                                 </Style>
                                                             </ContextMenu.ItemContainerStyle>
                                                             <ContextMenu.ItemTemplate>
                                                                 <DataTemplate>
-                                                                    <TextBlock Text="{Binding ., Converter={x:Static enigma:CodePointToLongStringConverter.Default}}" />
+                                                                    <TextBlock Text="{Binding ., Converter={x:Static converters:CodePointToLongStringConverter.Default}}" />
                                                                 </DataTemplate>
                                                             </ContextMenu.ItemTemplate>
                                                         </ContextMenu>
