--- a/DidacticalEnigma/Views/UsageDataSourcePreview.xaml
+++ b/DidacticalEnigma/Views/UsageDataSourcePreview.xaml
@@ -1,11 +1,12 @@
 ﻿<UserControl
-    x:Class="DidacticalEnigma.UsageDataSourcePreview"
+    x:Class="DidacticalEnigma.Views.UsageDataSourcePreview"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:DidacticalEnigma"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vms="clr-namespace:DidacticalEnigma.ViewModels"
+    xmlns:converters="clr-namespace:DidacticalEnigma.Converters"
     d:DataContext="{d:DesignInstance Type=vms:UsageDataSourcePreviewVM,
                                      IsDesignTimeCreatable=False}"
     d:DesignHeight="450"
@@ -87,7 +88,7 @@
                                 SelectedItem="{Binding Content.SelectedDataSource}">
                                 <ComboBox.ItemContainerStyle>
                                     <Style TargetType="{x:Type ComboBoxItem}">
-                                        <Setter Property="IsEnabled" Value="{Binding IsUsed, Converter={x:Static vms:BooleanNegationConverter.Default}}" />
+                                        <Setter Property="IsEnabled" Value="{Binding IsUsed, Converter={x:Static converters:BooleanNegationConverter.Default}}" />
                                     </Style>
                                 </ComboBox.ItemContainerStyle>
                             </ComboBox>
