--- a/DidacticalEnigma/App.xaml
+++ b/DidacticalEnigma/App.xaml
@@ -2,7 +2,6 @@
     x:Class="DidacticalEnigma.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:DidacticalEnigma"
-    StartupUri="Views/MainWindow.xaml">
+    xmlns:local="clr-namespace:DidacticalEnigma">
     <Application.Resources />
 </Application>
