--- a/DidacticalEnigma/Views/KanjiRadicalLookupControl.xaml
+++ b/DidacticalEnigma/Views/KanjiRadicalLookupControl.xaml
@@ -19,78 +19,81 @@
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="2*" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Button Click="ResetOnClick" Content="Reset" />
-                <CheckBox Grid.Column="1" IsChecked="{Binding HideNonMatchingRadicals}">
-                    <TextBlock Text="Hide non-matching radicals" />
-                </CheckBox>
-                <TextBlock
-                    Grid.Column="2"
-                    HorizontalAlignment="Left"
-                    Text="Search: " />
-                <TextBox Grid.Column="3" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" />
-            </Grid>
-            <ListView
-                x:Name="RadicalSelector"
-                Grid.Row="1"
-                ItemsSource="{Binding Radicals}"
-                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                SelectionChanged="ListView_Selected"
-                SelectionMode="Multiple">
-                <ListView.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel Orientation="Horizontal" />
-                    </ItemsPanelTemplate>
-                </ListView.ItemsPanel>
-                <ListView.ItemContainerStyle>
-                    <Style TargetType="{x:Type ListViewItem}">
-                        <Setter Property="IsEnabled" Value="{Binding Enabled}" />
-                        <Setter Property="Visibility" Value="{Binding Visible}" />
-                    </Style>
-
-                </ListView.ItemContainerStyle>
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Width="{Binding DataContext.Width, RelativeSource={RelativeSource AncestorType=ListView, Mode=FindAncestor}}" Height="{Binding DataContext.Height, RelativeSource={RelativeSource AncestorType=ListView, Mode=FindAncestor}}">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
-                            <TextBlock
-                                Grid.Column="0"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                Background="{Binding Highlighted, Converter={x:Static converters:BooleanToBrushConverter.Default}}"
-                                Focusable="{Binding Enabled}"
-                                FontSize="24"
-                                Text="{Binding Name}" />
-                            <TextBlock
-                                Grid.Column="1"
-                                HorizontalAlignment="Right"
-                                VerticalAlignment="Bottom"
-                                FontSize="9"
-                                Text="{Binding StrokeCount}" />
-                        </Grid>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0" Grid.Column="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Button Click="ResetOnClick" Content="Reset" />
+            <CheckBox Grid.Column="1" IsChecked="{Binding HideNonMatchingRadicals}">
+                <TextBlock Text="Hide non-matching radicals" />
+            </CheckBox>
+            <TextBlock
+                Grid.Column="2"
+                HorizontalAlignment="Left"
+                Text="Search: " />
+            <TextBox Grid.Column="3" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" />
         </Grid>
+        <Grid Grid.Row="0" Grid.Column="1">
+            <ComboBox ItemsSource="{Binding SortingCriteria}" SelectedItem="{Binding CurrentSortingCriterion}" />
+        </Grid>
+        <ListView
+            x:Name="RadicalSelector"
+            Grid.Row="1"
+            Grid.Column="0"
+            ItemsSource="{Binding Radicals}"
+            ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+            SelectionChanged="ListView_Selected"
+            SelectionMode="Multiple">
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="IsEnabled" Value="{Binding Enabled}" />
+                    <Setter Property="Visibility" Value="{Binding Visible}" />
+                </Style>
+
+            </ListView.ItemContainerStyle>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Width="{Binding DataContext.Width, RelativeSource={RelativeSource AncestorType=ListView, Mode=FindAncestor}}" Height="{Binding DataContext.Height, RelativeSource={RelativeSource AncestorType=ListView, Mode=FindAncestor}}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock
+                            Grid.Column="0"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Background="{Binding Highlighted, Converter={x:Static converters:BooleanToBrushConverter.Default}}"
+                            Focusable="{Binding Enabled}"
+                            FontSize="24"
+                            Text="{Binding Name}" />
+                        <TextBlock
+                            Grid.Column="1"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Bottom"
+                            FontSize="9"
+                            Text="{Binding StrokeCount}" />
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
         <ListBox
+            Grid.Row="1"
             Grid.Column="1"
             HorizontalContentAlignment="Stretch"
             VerticalContentAlignment="Stretch"
-            ItemsSource="{Binding Kanji}"
+            ItemsSource="{Binding SortedKanji}"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="{x:Type ListBoxItem}">
