EpWing read through zero-epwing project - streaming serialization

--- a/DidacticalEnigma/Views/MainWindow.xaml
+++ b/DidacticalEnigma/Views/MainWindow.xaml
@@ -155,6 +155,9 @@
             <TabItem Header="Katakana">
                 <views:KanaBoard DataContext="{Binding KatakanaBoard}" KeyClickCommand="{Binding DataContext.CurrentTextBuffer.InsertTextAtCaret, RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}}" />
             </TabItem>
+            <TabItem Header="Settings">
+                <TextBlock Text="To be implemented" />
+            </TabItem>
             <TabItem Header="About">
                 <TextBox IsReadOnly="True" Text="{Binding AboutText, Mode=OneWay}" />
             </TabItem>
