--- a/DidacticalEnigma/Views/KanjiRadicalLookupControl.xaml
+++ b/DidacticalEnigma/Views/KanjiRadicalLookupControl.xaml
@@ -120,6 +120,7 @@
                         Command="{Binding KeyClickCommand, RelativeSource={RelativeSource AncestorType={x:Type views:KanjiRadicalLookupControl}, Mode=FindAncestor}}"
                         CommandParameter="{Binding .}"
                         Content="{Binding .}"
+                        Focusable="False"
                         FontSize="24" />
                 </DataTemplate>
             </ListBox.ItemTemplate>
