--- a/DidacticalEnigma/Views/SplashScreen.xaml
+++ b/DidacticalEnigma/Views/SplashScreen.xaml
@@ -1,32 +1,43 @@
-﻿<Window x:Class="DidacticalEnigma.Views.SplashScreen"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DidacticalEnigma.Views"
-        mc:Ignorable="d"
-        ShowInTaskbar="False" 
-        ResizeMode="NoResize" 
-        WindowStartupLocation="CenterScreen"
-        WindowStyle="None" 
-        AllowsTransparency="True"
-        Title="Didactical Enigma" 
-        SizeToContent="WidthAndHeight" 
-        Topmost="True" >
-    <Border BorderThickness="1" BorderBrush="Black">
-    <Grid>
-        <Grid.RowDefinitions>
+﻿<Window
+    x:Class="DidacticalEnigma.Views.SplashScreen"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:DidacticalEnigma.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Didactical Enigma"
+    AllowsTransparency="True"
+    ResizeMode="NoResize"
+    ShowInTaskbar="False"
+    SizeToContent="WidthAndHeight"
+    Topmost="True"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    mc:Ignorable="d">
+    <Border BorderBrush="Black" BorderThickness="1">
+        <Grid>
+            <Grid.RowDefinitions>
 
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <TextBlock FontSize="60"
-                   Margin="10"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   Text="Didactical Enigma">
-        </TextBlock>
-        <TextBlock Text="Loading..." Grid.Row="1" HorizontalAlignment="Center" FontSize="20"></TextBlock>
-    </Grid>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <TextBlock
+                Margin="10"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="60"
+                Text="Didactical Enigma" />
+            <TextBlock
+                Grid.Row="1"
+                HorizontalAlignment="Center"
+                FontSize="20"
+                Text="Loading..." />
+            <TextBlock
+                Grid.Row="2"
+                HorizontalAlignment="Center"
+                FontSize="12"
+                Text="{Binding ProgressReport}" />
+        </Grid>
     </Border>
 </Window>
