--- a/DidacticalEnigma/Views/KanjiRadicalLookupControl.xaml
+++ b/DidacticalEnigma/Views/KanjiRadicalLookupControl.xaml
@@ -41,7 +41,10 @@
             <TextBox Grid.Column="3" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" />
         </Grid>
         <Grid Grid.Row="0" Grid.Column="1">
-            <ComboBox ItemsSource="{Binding SortingCriteria}" SelectedIndex="{Binding CurrentKanjiOrderingIndex}" />
+            <ComboBox
+                ItemsSource="{Binding SortingCriteria}"
+                SelectedIndex="{Binding CurrentKanjiOrderingIndex}"
+                SelectionChanged="Selector_OnSelectionChanged" />
         </Grid>
         <ListView
             x:Name="RadicalSelector"
