--- a/DidacticalEnigma/Views/UsageDataSourcePreview.xaml
+++ b/DidacticalEnigma/Views/UsageDataSourcePreview.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:converters="clr-namespace:DidacticalEnigma.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:icons="clr-namespace:DidacticalEnigma.Icons"
     xmlns:local="clr-namespace:DidacticalEnigma"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vms="clr-namespace:DidacticalEnigma.ViewModels"
@@ -74,14 +75,13 @@
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
-                            <Button
-                                Grid.Column="0"
-                                Command="{Binding HSplit}"
-                                Content="H" />
-                            <Button
-                                Grid.Column="1"
-                                Command="{Binding VSplit}"
-                                Content="V" />
+                            <Button Grid.Column="0" Command="{Binding HSplit}">
+                                <icons:RowSplitIcon Width="16" Height="16" />
+                            </Button>
+
+                            <Button Grid.Column="1" Command="{Binding VSplit}">
+                                <icons:ColumnSplitIcon Width="16" Height="16" />
+                            </Button>
                             <Button Grid.Column="2" Content="{Binding Content.SelectedDataSource.Entity.IsProcessing, Converter={x:Static converters:BooleanToLoadingTextConverter.Default}}" />
                             <ComboBox
                                 Grid.Column="3"
@@ -98,10 +98,9 @@
                                     </DataTemplate>
                                 </ComboBox.ItemTemplate>
                             </ComboBox>
-                            <Button
-                                Grid.Column="4"
-                                Command="{Binding Close}"
-                                Content="X" />
+                            <Button Grid.Column="4" Command="{Binding Close}">
+                                <icons:CloseIcon Width="16" Height="16" />
+                            </Button>
                         </Grid>
                         <FlowDocumentScrollViewer Grid.Row="1" Document="{Binding Content.SelectedDataSource.Entity.Document}" />
                     </Grid>
