--- a/DidacticalEnigma/Views/KanjiRadicalLookupControl.xaml
+++ b/DidacticalEnigma/Views/KanjiRadicalLookupControl.xaml
@@ -38,7 +38,10 @@
                 Grid.Column="2"
                 HorizontalAlignment="Left"
                 Text="Search: " />
-            <TextBox Grid.Column="3" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBox
+                Grid.Column="3"
+                PreviewKeyDown="OnKeyPressedDown"
+                Text="{Binding SearchText, RelativeSource={RelativeSource AncestorType={x:Type views:KanjiRadicalLookupControl}, Mode=FindAncestor}, UpdateSourceTrigger=Explicit}" />
         </Grid>
         <Grid Grid.Row="0" Grid.Column="1">
             <ComboBox ItemsSource="{Binding SortingCriteria}" SelectedIndex="{Binding CurrentKanjiOrderingIndex}" />
