--- a/DidacticalEnigma/Views/MainWindow.xaml
+++ b/DidacticalEnigma/Views/MainWindow.xaml
@@ -143,7 +143,8 @@
                     DataContext="{Binding KanjiLookupVM}"
                     KeyClickCommand="{Binding DataContext.InsertTextAtCaret, RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}}"
                     Radicals="{Binding Radicals}"
-                    ResetCommand="{Binding Reset}" />
+                    ResetCommand="{Binding Reset}"
+                    SearchText="{Binding SearchQueryText, Mode=TwoWay}" />
             </TabItem>
             <TabItem Header="Katakana">
                 <views:KanaBoard DataContext="{Binding KatakanaBoard}" KeyClickCommand="{Binding DataContext.InsertTextAtCaret, RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}}" />
