--- a/DidacticalEnigma/Views/KanjiRadicalLookupControl.xaml
+++ b/DidacticalEnigma/Views/KanjiRadicalLookupControl.xaml
@@ -32,7 +32,7 @@
             </Grid.ColumnDefinitions>
             <Button Command="{Binding ResetCommand, RelativeSource={RelativeSource AncestorType={x:Type views:KanjiRadicalLookupControl}, Mode=FindAncestor}}" Content="Reset" />
             <CheckBox Grid.Column="1" IsChecked="{Binding HideNonMatchingRadicals}">
-                <TextBlock Text="Hide non-matching radicals" />
+                <TextBlock Text="Hide non-matching components" />
             </CheckBox>
             <TextBlock
                 Grid.Column="2"
