Update to Xamarin project

--- a/DidacticalEnigma.Xam/Views/ResultsPage.xaml
+++ b/DidacticalEnigma.Xam/Views/ResultsPage.xaml
@@ -1,13 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DidacticalEnigma.Xam.Views.ItemsPage"
-              Title="{Binding Title}"
-             x:Name="BrowseItemsPage">
-
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Clicked="AddItem_Clicked" />
-    </ContentPage.ToolbarItems>
+             x:Class="DidacticalEnigma.Xam.Views.ResultsPage"
+             Title="{Binding Title}"
+             NavigationPage.HasNavigationBar="False">
 
     <StackLayout>
         <ListView x:Name="ItemsListView"
