--- a/DidacticalEnigma.Xam/Views/AboutPage.xaml
+++ b/DidacticalEnigma.Xam/Views/AboutPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DidacticalEnigma.Xam.Views.AboutPage"
              xmlns:vm="clr-namespace:DidacticalEnigma.Xam.ViewModels"
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+             NavigationPage.HasNavigationBar="False">
     
     <ContentPage.BindingContext>
         <vm:AboutViewModel />
