--- a/DidacticalEnigma.Xam/Views/InputPage.xaml
+++ b/DidacticalEnigma.Xam/Views/InputPage.xaml
@@ -2,29 +2,31 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:DidacticalEnigma.Xam.ViewModels;assembly=DidacticalEnigma.Xam"
-             x:Class="DidacticalEnigma.Xam.Views.InputPage">
+             xmlns:controls="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView"
+             x:Class="DidacticalEnigma.Xam.Views.InputPage"
+             NavigationPage.HasNavigationBar="False">
     <ContentPage.BindingContext>
         <viewModels:InputViewModel />
     </ContentPage.BindingContext>
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="2*"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
             <Editor Text="{Binding InputText, Mode=TwoWay}"></Editor>
             <Button Grid.Row="1" Text="Parse text"></Button>
-            <ListView Grid.Row="2" ItemsSource="{Binding RadicalLookup.Radicals}" SelectionMode="None" >
-                <ListView.ItemTemplate>
+            <CollectionView Grid.Row="2" ItemsSource="{Binding RadicalLookup.Radicals}" SelectionMode="None">
+                <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
                             <Button Text="{Binding StringRepresentation}" ></Button>
                         </ViewCell>
                     </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
             <ListView Grid.Row="3">
 
             </ListView>
