--- a/DidacticalEnigma.Xam/Views/MainPage.xaml
+++ b/DidacticalEnigma.Xam/Views/MainPage.xaml
@@ -2,7 +2,8 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:views="clr-namespace:DidacticalEnigma.Xam.Views"
-            x:Class="DidacticalEnigma.Xam.Views.MainPage">
+            x:Class="DidacticalEnigma.Xam.Views.MainPage"
+            NavigationPage.HasNavigationBar="False">
 
     <TabbedPage.Children>
         <NavigationPage Title="Input">
@@ -13,7 +14,7 @@
 
         <NavigationPage Title="Results">
             <x:Arguments>
-                <views:ItemsPage />
+                <views:ResultsPage />
             </x:Arguments>
         </NavigationPage>
         
