Bring Xamarin.Forms back, with UWP too

--- a/DidacticalEnigma.Xam/Views/MainPage.xaml
+++ b/DidacticalEnigma.Xam/Views/MainPage.xaml
@@ -3,7 +3,9 @@
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:views="clr-namespace:DidacticalEnigma.Xam.Views"
             x:Class="DidacticalEnigma.Xam.Views.MainPage"
-            NavigationPage.HasNavigationBar="False">
+            NavigationPage.HasNavigationBar="False"
+            xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
+            android:TabbedPage.IsSwipePagingEnabled="False">
 
     <TabbedPage.Children>
         <NavigationPage Title="Input">
