--- a/DidacticalEnigma.Xam/Views/InputPage.xaml
+++ b/DidacticalEnigma.Xam/Views/InputPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:DidacticalEnigma.Xam.ViewModels;assembly=DidacticalEnigma.Xam"
-             xmlns:controls="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView"
+             xmlns:views="clr-namespace:DidacticalEnigma.Xam.Views;assembly=DidacticalEnigma.Xam"
              x:Class="DidacticalEnigma.Xam.Views.InputPage"
              NavigationPage.HasNavigationBar="False">
     <ContentPage.BindingContext>
@@ -17,18 +17,10 @@
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
             <Editor Text="{Binding InputText, Mode=TwoWay}"></Editor>
-            <Button Grid.Row="1" Text="Parse text"></Button>
-            <CollectionView Grid.Row="2" ItemsSource="{Binding RadicalLookup.Radicals}" SelectionMode="None">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <Button Text="{Binding StringRepresentation}" ></Button>
-                        </ViewCell>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
+            <Button Grid.Row="1" Text="Parse text" Command="{Binding ParseTextCommand}"></Button>
+            <views:ButtonWrapListView Grid.Row="2"></views:ButtonWrapListView>
             <ListView Grid.Row="3">
-
+                
             </ListView>
         </Grid>
     </ContentPage.Content>
