--- a/DidacticalEnigma.Xam/Views/ResultsPage.xaml
+++ b/DidacticalEnigma.Xam/Views/ResultsPage.xaml
@@ -1,20 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewModels="clr-namespace:DidacticalEnigma.Xam.ViewModels;assembly=DidacticalEnigma.Xam"
              x:Class="DidacticalEnigma.Xam.Views.ResultsPage"
              Title="{Binding Title}"
              NavigationPage.HasNavigationBar="False">
 
-    <StackLayout>
-        <ListView x:Name="ItemsListView"
-                ItemsSource="{Binding Items}"
-                VerticalOptions="FillAndExpand"
-                HasUnevenRows="true"
-                RefreshCommand="{Binding LoadItemsCommand}"
-                IsPullToRefreshEnabled="true"
-                IsRefreshing="{Binding IsBusy, Mode=OneWay}"
-                CachingStrategy="RecycleElement"
-                ItemSelected="OnItemSelected">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <ScrollView Orientation="Horizontal">
+            <StackLayout Orientation="Horizontal" x:Name="Elements">
+                
+            </StackLayout>
+        </ScrollView>
+        <ListView
+            x:Name="ItemsListView"
+            Grid.Row="1"
+            ItemsSource="{Binding Items}"
+            VerticalOptions="FillAndExpand"
+            HasUnevenRows="true"
+            IsRefreshing="{Binding IsBusy, Mode=OneWay}"
+            CachingStrategy="RecycleElement"
+            ItemSelected="OnItemSelected">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
@@ -32,6 +42,6 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-    </StackLayout>
-    
+    </Grid>
+
 </ContentPage>
